Clean up safe IntelliJ warnings